# openspy-core

./: .env-local  CMakeLists.txt  DESIGN.md  Dockerfile  Dockerfile.build  Dockerrun.aws.json  MMQuery.cpp  MMQuery.h  NetDriver.cpp  NetServer.cpp  NetServer.h  README.md  SelectNetEventManager.cpp  SelectNetEventManager.h  TODO.txt  Vagrantfile  bootstrap.sh  build.sh  docker-compose.yaml  main.cpp  main.h  redis.txt  redis_init_dbg.txt  start_openspy.sh  vcpkg-configuration.json  vcpkg.json
FESL/: CMakeLists.txt  main.cpp
FESL/server/: FESLBackend.cpp  FESLBackend.h  FESLDriver.cpp  FESLDriver.h  FESLPeer.cpp  FESLPeer.h  FESLPeer_BasicCmds.cpp  FESLPeer_NuCmds.cpp  FESLServer.cpp  FESLServer.h
FESL/server/tasks/: Perform_GetEntitledGameFeatures.cpp  Perform_GetObjectInventory.cpp  tasks.cpp  tasks.h
code/: CMakeLists.txt
code/FESL/: CMakeLists.txt  main.cpp
code/FESL/server/: FESLDriver.cpp  FESLDriver.h  FESLPeer.cpp  FESLPeer.h  FESLServer.cpp  FESLServer.h
code/GP/: CMakeLists.txt  main.cpp
code/GP/server/: GPDriver.cpp  GPDriver.h  GPPeer.cpp  GPPeer.h  GPServer.cpp  GPServer.h  ListHandler.cpp
code/GP/tasks/: Auth_NickEMail_GPHash.cpp  Auth_Uniquenick_GPHash.cpp  BuddyRequest.cpp  PresenceMessageListener.cpp  SendBuddyMessage.cpp  SendGPBuddyStatus.cpp  SetPresenceStatus.cpp  ToFromProfileAction.cpp  tasks.cpp  tasks.h
code/SharedTasks/: CMakeLists.txt
code/SharedTasks/Account/: AccountTasks.cpp
code/SharedTasks/Auth/: AuthTasks.cpp  AuthTasks.h
code/SharedTasks/CDKey/: CDKeyTasks.cpp
code/cdkey/: CMakeLists.txt  main.cpp
code/cdkey/server/: CDKeyDriver.cpp  CDKeyDriver.h  CDKeyServer.cpp  CDKeyServer.h
code/core/: CMakeLists.txt
code/core/OS/: Address.cpp  Base64.cpp  Buffer.cpp  Buffer.h  HTTP.cpp  KVReader.cpp  KVReader.h  OpenSpy.cpp  OpenSpy.h  Redis.cpp  Redis.h  Ref.h  SSL.h  Serializable.h  StringCrypter.cpp
code/core/test/: CMakeLists.txt
code/gamestats/: CMakeLists.txt  main.cpp
code/gamestats/server/: GSDriver.cpp  GSDriver.h  GSPeer.cpp  GSPeer.h  GSServer.cpp  GSServer.h
code/natneg/: CMakeLists.txt  main.cpp
code/natneg/server/: NATMapper.cpp  NATMapper.h  NNDriver.cpp  NNDriver.h  NNServer.cpp  NNServer.h
code/natneg/tasks/: SendMsgMessage.cpp  SubmitJson.cpp  tasks.cpp  tasks.h
code/peerchat/: CMakeLists.txt  main.cpp  match.c  match.cpp
code/peerchat/server/: Driver.cpp  Driver.h  Peer.cpp  Peer.h  Server.cpp  Server.h  chatCrypt.cpp  chatCrypt.h  gs_peerchat.cpp  gs_peerchat.h  irc_common.cpp  irc_common.h
code/peerchat/tasks/: Channel.cpp  Chanprops.cpp  Perform_CountServerUsers.cpp  Perform_DelChanProps.cpp  Perform_DeleteUser.cpp  Perform_GetChannelKeys.cpp  Perform_GetChannelUserKeys.cpp  Perform_GetUserKeys.cpp  Perform_KeepaliveUser.cpp  Perform_ListChanProps.cpp  Perform_ListChannels.cpp  Perform_ListUsermodes.cpp  Perform_LookupChannelDetails.cpp  Perform_LookupGameInfo.cpp  Perform_LookupGlobalUsermode.cpp  Perform_LookupUserDetails.cpp  Perform_OperCheck.cpp  Perform_RemoteKill_ByName.cpp  Perform_SendMessageToTarget.cpp  Perform_SetBroadcastToVisibleUsers.cpp  Perform_SetChanProps.cpp  Perform_SetChannelKeys.cpp  Perform_SetChannelUserKeys.cpp  Perform_SetUserDetails.cpp  Perform_SetUserKeys.cpp  Perform_Setusermode.cpp  Perform_UpdateChannelModes.cpp  Perform_UpdateChannelModes_BanMask.cpp  Perform_UpdateUserModes.cpp  Perform_UserJoinChannel.cpp  Perform_UserJoinEvents.cpp  Perform_UserKickChannel.cpp  Perform_UserPartChannel.cpp  User.cpp  Usermode.cpp  tasks.cpp  tasks.h
code/qr/: CMakeLists.txt  main.cpp  main.h
code/qr/server/: QRDriver.cpp  QRDriver.h  QRServer.cpp  QRServer.h  V1Handler.cpp  V2Handler.cpp  V2Peer.h  v2.h
code/qr/tasks/: ClientMessageAck.cpp  GetGameInfo.cpp  HandleClientMessage.cpp  Handle_QRMessage.cpp  Heartbeat.cpp  Keepalive.cpp  ValidateServer.cpp  shared.cpp  tasks.cpp  tasks.h
code/search/: CMakeLists.txt  main.cpp
code/search/server/: SMDriver.cpp  SMDriver.h  SMPeer.cpp  SMPeer.h  SMServer.cpp  SMServer.h
code/serverbrowsing/: CMakeLists.txt  main.cpp
code/serverbrowsing/filter/: CToken.cpp  CToken.h  filter.cpp  (+1 more)
code/utmaster/: CMakeLists.txt  conn  main.cpp  message.txt  news_only  openspy.txt  server_list  ut2004_ms.pcapng  ut2004_ms_with_uplink.pcapng
core/: CMakeLists.txt  Makefile
core/OS/: Auth.cpp  Auth.h  Base64.cpp  Buffer.cpp  Buffer.h  Date.cpp  Date.h  GPShared.cpp  GPShared.h  HTTP.cpp  HTTP.h  KVReader.cpp  KVReader.h  LinkedList.h  Logger.h  Mutex.h  OpenSpy.cpp  OpenSpy.h  Profile.cpp  Profile.h  Redis.cpp  Redis.h  Ref.h  StringCrypter.cpp  StringCrypter.h  Task.h  TaskPool.h  Thread.h  ThreadPoller.h  User.cpp  User.h  Win32Helper.cpp  config.cpp  config.h
core/test/: CMakeLists.txt
gamestats/: CMakeLists.txt  main.cpp
gamestats/server/: GPBackend.cpp  GPBackend.h  GPDriver.cpp  GPDriver.h  GPPeer.cpp  GPPeer.h  GPServer.cpp  GPServer.h  GSBackend.cpp  GSBackend.h  GSDriver.cpp  GSDriver.h  GSPeer.cpp  GSPeer.h  GSServer.cpp  GSServer.h
qr/: CMakeLists.txt  main.cpp
qr/server/: MMPush.cpp  MMPush.cpp_old  MMPush.h  MMPush.h_old  QRDriver.cpp  QRDriver.h  QRPeer.cpp  QRPeer.h  QRServer.cpp  QRServer.h  V1Peer.cpp  V1Peer.h  V2Peer.cpp  V2Peer.h
qr/tasks/: DeleteServer.cpp  GetGameInfo.cpp  HandleClientMessage.cpp  PushServer.cpp  UpdateServer.cpp  UpdateServer_NoDiff.cpp  shared.cpp  tasks.cpp  tasks.h
qr/test/: cases.txt
serverbrowsing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp  main.h
serverbrowsing/filter/: CToken.cpp  CToken.h  filter.cpp  filter.h
serverbrowsing/server/: MMQuery.cpp  MMQuery.cpp_old  MMQuery.h  MMQuery.h_old  SBDriver.cpp  SBDriver.h  SBPeer.cpp  SBPeer.h  SBServer.cpp  SBServer.h  V1Peer.cpp  V1Peer.h  V2Peer.cpp  V2Peer.h  gutil.h  sb_crypt.cpp  sb_crypt.h
serverbrowsing/tasks/: GetGameInfoByGameName.cpp  GetGameInfoPairByGameName.cpp  GetGroups.cpp  GetServerByIP.cpp  GetServerByKey.cpp  GetServers.cpp  HandleServerEventMsg.cpp  SubmitData.cpp  tasks.cpp  tasks.h
serverbrowsing/test/: CMakeLists.txt  test_common.cpp  test_main.cpp
(+739 files in other folders)
